# segment-api

./: Makefile  README.md  segment-api.cabal
src/Web/: Segment.hs
src/Web/Segment/: Types.hs
test/: Spec.hs  SpecWrapper.hs
test/Web/: SegmentSpec.hs
