name:                segment-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mwotton/segment-api#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
copyright:           AllRightsReserved
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Segment
  build-depends: aeson
               , aeson-qq
               , base >= 4.7 && < 5
               , servant-client
               , text
               , uuid
               , time
               , email-validate
               , containers
               , country-codes
               , network-uri
               , cases
               , Decimal
               , currency
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mwotton/segment-api


test-suite tests
  type: exitcode-stdio-1.0
  main-is: SpecWrapper.hs
  other-modules:  Spec
  hs-source-dirs:
      test
  ghc-options: -Wall -fwarn-tabs -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , hspec
               , hspec-stack-rerun
               , segment-api
