name:                segment-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mwotton/segment-api#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
copyright:           AllRightsReserved
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Segment, Web.Segment.Types, Paths_segment_api
  build-depends: aeson
               , aeson-qq
               , base >= 4.7 && < 5
               , bytestring
               , cases
               , containers
               , country-codes
               , country-codes
               , currency
               , Decimal
               , email-validate
               , http-client
               , http-client-tls
               , iproute
               , network-uri
               , servant
               , servant-client
               , text
               , time
               , transformers
               , uuid
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mwotton/segment-api


test-suite tests
  type: exitcode-stdio-1.0
  main-is: SpecWrapper.hs
  other-modules:  Spec, Web.SegmentSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -fwarn-tabs -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , hspec
               , hspec-stack-rerun
               , segment-api
               , uuid
               , time